tests/paczka1/fuzzy1/42087060.err
Error in line 36: YlkR S225 29,6
Error in line 32: Muo7PM A351 76,2
Error in line 38: Muo7PM S451 41,9
